--- a/Legg_V2.rmd
+++ b/Legg_V2.rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
 library(moments)
 library(psych)
+library(forecast)
+library(tseries)
 ```
 
 
@@ -318,7 +320,7 @@ acf(unem.ts, lag.max = 61, main = ""); title("ACF Unemployment Rate")
 pacf(unem.ts, lag.max = 61, main = ""); title("PACF Unemployment Rate")
 ```
 
-The acf shows slow decay from lag 0 coupled with a sharp drop of pacf after lag 1. This is a sign of an AR(1) process. We see minor local maxima on the acf at lag 12, 24, 36 and 48 which indicate seasonal effects. The significant, negative pacfs which tails off at lag 13, 25, 37, 49 suggest seasonal AR or MA components. Some smaller significant pacf values within the first 12 lags suggest either some AR processes or an MA process in that range.
+The acf shows slow decay from lag 0 coupled with a sharp drop of pacf after lag 1. This is a sign of an AR(1) process. We see minor local maxima on the acf at lag 12, 24, 36 and 48 which indicate seasonal effects. The significant, negative pacfs which tails off at lag 13, 25, 37, 49 suggest seasonal AR or MA components. Some smaller significant pacf values within the first 12 lags suggest either some AR processes or an MA process in that range. If we cannot do differencing at all, our search space for the model can be the lower orders of SARIMA(10,0,4)(4,0,1).
 
 To help us further in establishing stationarity, we compare the seasonal differenced and first differenced series and compare their behaviors using time and autocorrelation plots.
 
@@ -385,7 +387,7 @@ pacf(unem.ts.diff, lag.max = 720, main = "")
 title("PACF First Diffenced Unemployment Rate")
 ```
 
-Above plots: In the first differenced series, the plots show periodic behavior, the extended plot show that acf tails off until lag 720, which suggest either a seasonal long memory or seasonal integrated process (both SAR(1)) in combination with some sesonal AR(2-4) components or in combination with a seasonal MA component. The pacf show some significance between lag 2-9 without a little echo in the acf lag 13-16, which can come from some MA processes but it's hard to say at this stage. We simply assume some ARMA processes present. We may entertain the model as a SARIMA(9,1,q)(4,0,Q) using these plots.
+Above plots: In the first differenced series, the plots show periodic behavior, the extended plot show that acf tails off until lag 720, which suggest either a seasonal long memory or seasonal integrated process (both SAR(1)) in combination with a sesonal MA(1) or in combination with some seasonal AR(2-4) components. The pacf show some significance between lag 2-9 without a little echo in the acf lag 13-16, which can come from some MA processes but it's hard to say at this stage. We simply assume some ARMA processes present. We may entertain the model as a SARIMA(9,1,q)(1,0,1) using these plots.
 
 ```{r}
 par(mfrow = c(2,1))
@@ -717,3 +719,90 @@ From the time plots and acf plots, the residual series still picks up most of th
 We conclude the bivariate investigation that there is clearly linear relationship between the unemployment and autosales, but the two are not necessarily cointegrated. A VAR model that regress unemployment on lags of auto sales is probably more appropriate than cointegration specific models, like VECM.
 
 
+
+#Question 1
+
+**During your EDA, you notice that your data exhibits both seasonality (different months have different heights) AND that there is a clear linear trend. How many order of non-seasonal and seasonal differencing would it take to make this time-series stationary in the mean? Why?**
+
+To remove linear trend it is necessary to difference once with lag 1. Because in a purely linear trend, differencing by the last observation singles out the roughly equivalent increments which are stationary at the mean. To remove seasonal patterns, it is necessary to difference once with lag 12 for annual patterns, or lag 4 for quarterly patterns. Because in a purely seasonal series where each observation is same as the one from the last season, differencing by the observation from last season removes seasonal fluctuations and stablize the series at the mean. Real world economic time series, like ours, often exhibit both linear trend in additional to annual seasonal behavior. Therefore differencing by lag 1 and lag 12 will help stablize the raw series at the mean. In the following we simulate a raw series that is a random walk with drift(linear trend) and strong dependence on its seasonal lag 1, then demonstrate how first and seasonal differencing can stablize it at the mean. The model is :
+
+$$(1-B)(1 - B^{12})X_t = 0.5 + W_t$$
+
+$$X_t = 0.5 + X_{t-12} - X_{t-13} + X_{t-1} + w_t$$
+
+```{r}
+set.seed(30)
+x<-w<-rnorm(200)
+
+#x_t = 0.2 + 0.8*x_{t-12}-0.8*x_{t-13}+x_{i-1}+w_t
+for(i in 14:200) x[i]<- 0.5 + x[i-12]- x[i-13]+x[i-1]+w[i]
+
+
+#difference only once
+y1<-diff(x)
+
+#difference only seasonally
+y12<-diff(x,12)
+
+#difference lag 1 and seasonally
+y<-diff(diff(x),12)
+
+# Kernel smoothing
+x.k.smooth.widest = ksmooth(time(x), 
+                             x, kernel = c("normal"), 
+                             bandwidth = 25)
+y1.k.smooth.widest = ksmooth(time(y1), 
+                             y1, kernel = c("normal"), 
+                             bandwidth = 25)
+y12.k.smooth.widest = ksmooth(time(y12), 
+                             y12, kernel = c("normal"), 
+                             bandwidth = 25)
+y.k.smooth.widest = ksmooth(time(y), 
+                             y, kernel = c("normal"), 
+                             bandwidth = 25)
+
+# Make plots
+par(mfrow = c(2,2))
+
+plot(x, type="l", col = "darkgray")
+title("Raw Series")
+lines(x.k.smooth.widest$x, x.k.smooth.widest$y, col = "magenta")
+abline(lm(x~time(x)), lty = "dotdash", col = "black", lwd = 2)
+
+plot(y1, type="l", col = "darkgray")
+title("First Differenced Series")
+lines(y1.k.smooth.widest$x, y1.k.smooth.widest$y, col = "magenta")
+abline(lm(y1~time(y1)), lty = "dotdash", col = "black", lwd =2)
+
+plot(y12, type="l", col = "darkgray")
+title("Seasonal Differenced Series")
+lines(y12.k.smooth.widest$x, y12.k.smooth.widest$y, col = "magenta")
+abline(lm(y12~time(y12)), lty = "dotdash", col = "black", lwd = 2)
+
+plot(y, col = "darkgray", type = "l")
+title("First and Seasonal Differenced Series")
+lines(y.k.smooth.widest$x, y.k.smooth.widest$y, col = "magenta")
+abline(lm(y~time(y)), lty = "dotdash", col = "black", lwd =2)
+```
+
+```{r}
+y = list()
+for (j in 1:10){
+  set.seed(j)
+  x<-w<-rnorm(200)
+  for(i in 14:200) x[i]<- 0.5 + x[i-12]- x[i-13]+x[i-1]+w[i]
+  y[[j]]<-diff(diff(x),12)
+}
+
+#par(mfrow = c(2,2))
+
+plot(y[[1]], col = rgb(0,0,0, alpha = 0), ylab = "differenced values",
+     main = "10 Simulated 1st & 12th Differenced Series")
+axis(side = 2, at = seq(-2,3,0.5))
+for (j in 1:10){
+lines(y[[j]], col = j, type = "l", lwd = 1, lty = "dotted")
+abline(lm(y[[j]]~time(y[[1]])), 
+       col = j*3, lwd = 2)  
+}
+legend("topright",legend = "Theoretical Mean = 0.5", bty = "n")
+```
